<resources>
    <string name="app_name">Personas</string>
    <string name="agregar">AGREGAR</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">limpiar</string>
    <string name="numero">Numero</string>
    <string name="listar">Listar Personas</string>
    <string name="crear">Crear Personas</string>
    <string name="mensaje_exitoso">Personas Guardadas Con Exito!</string>
    <array name="opciones">
      <item>@string/crear</item>
        <item>@string/listar</item>  }
    </array>
</resources>
