<?xml version="1.0" encoding="utf-8"?>




<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:layout_editor_absoluteX="8dp"
tools:layout_editor_absoluteY="8dp"><![CDATA[
 tools:context="com.example.android.personas.CrearPersonas">

    ]]>

<TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/agregar"
    android:textAlignment="center"
    android:textSize="24sp"
    android:textStyle="bold" />

<EditText
    android:id="@+id/txtCédula"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:ems="10"
    android:hint="@string/cedula"
    android:inputType="number" />

<EditText
    android:id="@+id/txtNombre"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/nombre"
    android:inputType="textPersonName" />

<EditText
    android:id="@+id/txtCedula"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:ems="10"
    android:hint="@string/Apellido"
    android:inputType="textPersonName" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/guardar" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/limpiar" />
</LinearLayout>
</LinearLayout>